Finished the header

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
   <head>
+    <link href="index.css" type="text/css" rel="stylesheet" />
+    <meta charset="UTF-8" />
   </head>
 
   <body>
@@ -15,10 +17,9 @@
         search
       </div>
       <img src="images/logo.png" alt="NYT logo" width="" height="" />
-      <div class="header-right-button"> Subscribe Now</div>
-      <div class="header-right-button"> Log in</div>
       <div id="setting"> </div>
-
+      <div class="header-right-button"> Log in</div>
+      <div class="header-right-button"> Subscribe Now</div>
     </header>
 
     <div class="content">
@@ -249,7 +250,12 @@
             colleague and a member of Dr. Kovac’s team, <a href=""> knocked on his door with a bottle of Champagne </a> to tell him
             the news.
           </p>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/ZlfIVEy_YOA" frameborder="0" allowfullscreen></iframe>
+          <figure>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ZlfIVEy_YOA" frameborder="0" allowfullscreen></iframe>
+            <figcaption> Stanford Professor Andrei Linde celebrates physics breakthrough <span class="photographer"> Video by
+              StanfordUniversity </span>
+            </figcaption>
+          </figure>
           <p> Confused, Dr. Linde called out to his wife, asking if she had ordered anything. </p>
           <p> “And then I told him that in the beginning we thought that this was a delivery but we did not think that we ordered
             anything, but I simply forgot that actually I did order it, 30 years ago,” Dr. Linde wrote in an email.
@@ -360,16 +366,6 @@
               Subscribe </a>
             </p>
           </aside>
-
-
-
-
-
-
-
-
-
-
         </div> <!-- content-wrapper -->
       </section><!--main-content -->
 
@@ -425,7 +421,7 @@
           <p> <a href="">View more Trending contents »</a> </p>
         </div> <!-- trending-content -->
       </section><!--Suggested-content -->
-    </div>
+    </div> <!-- content -->
 
     <footer>
       <div class="site-map">
