Finished Related Contents

--- a/index.html
+++ b/index.html
@@ -26,33 +26,37 @@
       <section class="main-content">
         <aside class="related-content">
           <div class="related-content-article-link">
-            <img src="images/samesection_main_img1.png" atl="Article Image" width="65px" height="65px"/>
-            <p class="related-content-article-desc">Trilobites </p>
+              <img src="images/samesection_main_img1.png" atl="Article Image" width="65px" height="65px"/>
+              <p class="related-content-article-desc"> Trilobites </p>
             <p> <a href=""> The Biggest Digital Map of Cosmos ever made</a> </p>
+            <!--<p> Dummy </p>-->
           </div> <!-- related-content-article-link -->
           <div class="related-content-article-link">
             <img src="images/samesection_main_img2.png" atl="Article Image" width="65px" height="65px"/>
-            <p class="related-content-article-desc"> </p>
-            <p> <a href=""> Viru Robins, 88, Dies, Opened doors in Astronomy and for woman</a> </p>
+            <p> <a href=""> Viru Robins, 88, Dies, Opened doors in Astronomy and for woman</a></p>
+            <!--<p> Dummy </p>-->
           </div> <!-- related-content-article-link -->
           <div class="related-content-article-link">
             <img src="images/samesection_main_img3.png" atl="Article Image" width="65px" height="65px"/>
             <p> <a href=""> John Glenn, American Hero of space age, Dies at 95</a> </p>
+            <!--<p> Dummy </p>
+            <p> Dummy </p>-->
           </div> <!-- related-content-article-link -->
           <div class="related-content-article-link">
             <img src="images/samesection_main_img4.png" atl="Article Image" width="65px" height="65px"/>
-            <p class="related-content-article-desc">Feature</p>
+            <p class="related-content-article-desc"> Feature </p>
             <p> <a href="">The Woman who might find us another Earth </a> </p>
+            <!--<p> Dummy </p>-->
           </div> <!-- related-content-article-link -->
           <div class="related-content-paid-aricle">
             <img src="images/samesection_main_img5.png" atl="Article Image" width="65px" height="65px"/>
-            <p class="related-content-article-desc"> <span class="paid-post"> Paid post: </span> Philips</p>
+            <p class="related-content-article-desc"> <span class="paid-post"> Paid post: </span> Philips </p>
             <p> <a href=""> Is the Air Indoors is more poluted than air outside</a> </p>
+            <!--<p> Dummy </p>-->
           </div> <!-- related-content-article-link -->
           <div class="related-content-article-link">
-            <img src="images/samesection_main_img6.png" atl="Article Image" width="65px" height="65px"/>
-            <p class="related-content-article-desc"> </p>
-            <p> <a href=""> </a> </p>
+              <img src="images/samesection_main_img6.png" atl="Article Image" width="65px" height="65px"/>
+              <p> <a href=""></a> </p>
           </div> <!-- related-content-article-link -->
         </aside> <!-- related-content -->
 
