Completed the Main content

--- a/index.html
+++ b/index.html
@@ -88,36 +88,8 @@
               <p class="comment-text"> This type of "scientific" inquiry undermines the Bible and separates man further away from the
                 Almighty God. Bible teaching must be first... </p>
             </div> <!--single-comment -->
+            <p> <a href=""> See all comments</a></p>
           </div> <!-- comments -->
-
-          <div class="from-our-advertisers">
-            <h4> From our advertisers </h4>
-            <div class="single-add-article">
-              <img src="images/advertiser_img1.png" alt="Avertiser Article Image" width="66px" height="66px"/>
-              <p class="advertiser-name">Southeby International reality</p>
-              <p class="advertiser-article-heading"> 3 Ideal Mountain homes</p>
-              <p class="advertiser-article-desc"> If you don't love these mountain homes, stay at sea level</p>
-            </div>  <!-- single-add-article -->
-            <div class="single-add-article">
-              <img src="images/advertiser_img2.png" alt="Avertiser Article Image" width="66px" height="66px"/>
-              <p class="advertiser-name"> UBS </p>
-              <p class="advertiser-article-heading">Can Robots have feelings </p>
-              <p class="advertiser-article-desc"> Groundbreaking research in humanizing the AI</p>
-            </div>  <!-- single-add-article -->
-            <div class="single-add-article">
-              <img src="images/advertiser_img3.png" alt="Avertiser Article Image" width="66px" height="66px"/>
-              <p class="advertiser-name"> Tiffany &amp; Co.</p>
-              <p class="advertiser-article-heading"> Art contains Multitude</p>
-              <p class="advertiser-article-desc"> Art Critic Jerry Stalz on how art create new ways to see</p>
-            </div>  <!-- single-add-article -->
-            <div class="single-add-article">
-              <img src="images/advertiser_img4.png" alt="Avertiser Article Image" width="66px" height="66px"/>
-              <p class="advertiser-name"> Philips</p>
-              <p class="advertiser-article-heading"> Don't doze to dose </p>
-              <p class="advertiser-article-desc"> See how lifestyle changes and not pills can make you sleep better</p>
-            </div> <!-- single-add-article -->
-          </div> <!-- from-our-advertisers -->
-          <p class="subscription-link"> <a href=""> <img src="images/subscription_img1.png" alt = "subscribe to Newyork times" width="300px" hieght="250px" /> </a> </p>
         </aside> <!-- main-content-aside -->
         <div class="content-wrapper">
           <p> CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a
@@ -233,7 +205,38 @@
               we look, the universe has an even temperature.
             </p>
           </div> <!-- term-explanation -->
+          <p class="theory-author"> By LARRY BUCHANAN and JONATHAN CORUM </p>
         </aside> <!--related-theory -->
+        <aside class="main-content-aside">
+          <div class="from-our-advertisers">
+            <h4> From our advertisers </h4>
+            <div class="single-add-article">
+              <img src="images/advertiser_img1.png" alt="Avertiser Article Image" width="66px" height="66px"/>
+              <p class="advertiser-name">Southeby International reality</p>
+              <p class="advertiser-article-heading"> 3 Ideal Mountain homes</p>
+              <p class="advertiser-article-desc"> If you don't love these mountain homes, stay at sea level</p>
+            </div>  <!-- single-add-article -->
+            <div class="single-add-article">
+              <img src="images/advertiser_img2.png" alt="Avertiser Article Image" width="66px" height="66px"/>
+              <p class="advertiser-name"> UBS </p>
+              <p class="advertiser-article-heading">Can Robots have feelings </p>
+              <p class="advertiser-article-desc"> Groundbreaking research in humanizing the AI</p>
+            </div>  <!-- single-add-article -->
+            <div class="single-add-article">
+              <img src="images/advertiser_img3.png" alt="Avertiser Article Image" width="66px" height="66px"/>
+              <p class="advertiser-name"> Tiffany &amp; Co.</p>
+              <p class="advertiser-article-heading"> Art contains Multitude</p>
+              <p class="advertiser-article-desc"> Art Critic Jerry Stalz on how art create new ways to see</p>
+            </div>  <!-- single-add-article -->
+            <div class="single-add-article">
+              <img src="images/advertiser_img4.png" alt="Avertiser Article Image" width="66px" height="66px"/>
+              <p class="advertiser-name"> Philips</p>
+              <p class="advertiser-article-heading"> Don't doze to dose </p>
+              <p class="advertiser-article-desc"> See how lifestyle changes and not pills can make you sleep better</p>
+            </div> <!-- single-add-article -->
+          </div> <!-- from-our-advertisers -->
+        </aside> <!-- main-content-aside -->
+
         <div class="content-wrapper">
           <p>Dr. Kovac said the chance that the results were a fluke was only one in 10 million. </p>
           <p> Dr. Guth, now 67, pronounced himself “bowled over,” saying he had not expected such a definite confirmation in his
@@ -279,6 +282,13 @@
              the cause of genesis, said that if true, the Bicep result would eliminate his model, but he expressed reservations about
              inflation.
           </p>
+        </div> <!-- content-wrapper -->
+
+        <aside class="main-content-aside" >
+          <p class="subscription-link"> <a href=""> <img src="images/subscriptionlink_img.png" alt = "subscribe to Newyork times" width="300px" hieght="250px" /> </a> </p>
+        </aside> <!-- main-content-aside -->
+
+        <div class="content-wrapper">
           <p> Lawrence M. Krauss of Arizona State and others also emphasized the need for confirmation, noting that the new results
             exceeded earlier estimates based on temperature maps of the cosmic background by the European Space Agency’s Planck
             satellite and other assumptions about the universe.
