Finished The Page: Project Completed

--- a/index.html
+++ b/index.html
@@ -383,56 +383,69 @@
       </section><!--main-content -->
 
       <section class="suggested-content">
+        <div class="trending-content">
+          <h4> Trending </h4>
+          <ol>
+            <li><a href=""><img src="images/trending_img1.png" width="40px" height="40px"/> Ronda Rousey’s U.F.C. Return Ends in 48 Seconds of Punches by Amanda Nunes </a> </li>
+            <li><a href=""><img src="images/trending_img2.png" width="40px" height="40px"/>Feature: The Evalangical Scion who stopped believing </a></li>
+            <li><a href="">Valdimir putin won't expell US Diplomat as Russion Foreign minister Urged</a> </li>
+            <li><a href=""> <img src="images/trending_img4.png" width="40px" height="40px"/>The Coolest Scene in Snow Boarding? The coast of Rhodes Island</a></li>
+            <li><a href=""> <img src="images/trending_img5.png" width="40px" height="40px"/>Theressa May Scolds Kerry for focus on Israil Settlements</a></li>
+            <li><a href=""> <img src="images/trending_img6.png" width="40px" height="40px"/>'The Game will go on' as US expels Russian Diplomats</a></li>
+            <li><a href=""> <img src="images/trending_img7.png" width="40px" height="40px"/>New Analysis: Trump gets an opening from Russia but the path is risky</a></li>
+            <li><a href="">  <img src="images/trending_img8.png" width="40px" height="40px"/>New Analysis: If Donald Trump targets Journalists, Thank Obama</a></li>
+            <li><a href="">  <img src="images/trending_img9.png" width="40px" height="40px"/>Op-Ed Columininst: How much sugar you can avoid today</a></li>
+            <li><a href="">  <img src="images/trending_img10.png" width="40px" height="40px"/>Obama Strikes Back at Russia for election Hacking</a></li>
+          </ol>
+          <p> <a href="">View more Trending contents »</a> </p>
+        </div> <!-- trending-content -->
         <div class="more-related-content">
           <p> <h4> More in Space and Cosmos </h4> <a href=""> Go to Space and Cosmos Section » </a> </p>
           <div class="article-link">
             <img src="images/samesection_img1.png" alt ="Image 1" width="212px" height="142px"/>
             <p class="article-link-desc"> Trilobities</p>
             <p><a href = "">The Biggest Map of Cosmos ever made</a></p>
-            <div class="article-link">
-              <img src="images/samesection_img2.png" alt ="Image 2" width="212px" height="142px"/>
-              <p><a href = "">Vera Rubins 88 dies: Opened doors in Astronomy and for women</a></p>
-            </div> <!-- article-link -->
-            <div class="article-link">
-              <img src="images/samesection_img3.png" alt ="Image 3" width="212px" height="142px"/>
-              <p class="article-link-paidpost"> <a href=""> Paid Post </a> PHILIPS</p>
-              <p><a href = ""> Is your Indoor Air pure</a></p>
-            </div> <!-- article-link -->
-            <div class="article-link">
-              <img src="images/samesection_img4.png" alt ="Image 4" width="212px" height="142px"/>
-              <p class="article-link-desc"> John Glenn, American hero of space age, dies at 95</p>
-              <p><a href = ""> </a></p>
-            </div> <!-- article-link -->
-            <div class="article-link">
-              <img src="images/samesection_img5.png" alt ="Image 5" width="212px" height="142px"/>
-              <p class="article-link-desc"> Featured</p>
-              <p><a href = ""> The Woman who might find us another earth</a></p>
-            </div> <!-- article-link -->
-            <div class="article-link">
-              <img src="images/samesection_img6.png" alt ="Image 6" width="212px" height="142px"/>
-              <p class="article-link-desc"> Out here</p>
-              <p><a href = ""> Twinke Twinkle Little [Insert Name Here]</a></p>
-            </div> <!-- article-link -->
+          </div>
+          <div class="article-link">
+            <img src="images/samesection_img2.png" alt ="Image 2" width="212px" height="142px"/>
+            <p><a href = "">Vera Rubins 88 dies: Opened doors in Astronomy and for women</a></p>
+          </div> <!-- article-link -->
+          <div class="article-link">
+            <img src="images/samesection_img3.png" alt ="Image 3" width="212px" height="142px"/>
+            <p class="article-link-paidpost article-link-desc"> <a class = "article-link-desc" href=""> Paid Post </a> PHILIPS</p>
+            <p><a href = ""> Is your Indoor Air pure</a></p>
+          </div> <!-- article-link -->
+          <div class="article-link">
+            <img src="images/samesection_img4.png" alt ="Image 4" width="212px" height="142px"/>
+            <p> <a href=""> John Glenn, American hero of space age, dies at 95</a></p>
+            <p><a href = ""> </a></p>
+          </div> <!-- article-link -->
+          <div class="article-link">
+            <img src="images/samesection_img5.png" alt ="Image 5" width="212px" height="142px"/>
+            <p class="article-link-desc"> Featured</p>
+            <p><a href = ""> The Woman who might find us another earth</a></p>
+          </div> <!-- article-link -->
+          <div class="article-link">
+            <img src="images/samesection_img6.png" alt ="Image 6" width="212px" height="142px"/>
+            <p class="article-link-desc"> Out here</p>
+            <p><a href = ""> Twinke Twinkle Little [Insert Name Here]</a></p>
           </div> <!-- article-link -->
         </div><!-- more-related-content -->
-        <div class="recommended-content">
+        <div class="more-related-content">
+          <p> <h4> More in Space and Cosmos </h4> <a href=""> Go to Space and Cosmos Section » </a> </p>
+          <div class="article-link">
+            <img src="images/recommended_img1.png" alt ="Image 2" width="212px" height="142px"/>
+            <p><a href = "">House Republicans, Under Fire, Backs down for gutting Ethics Office</a></p>
+          </div> <!-- article-link -->
+          <div class="article-link">
+            <img src="images/recommended_img2.png" alt ="Image 2" width="212px" height="142px"/>
+            <p><a href = "">Turmoil overshadows first day of republican controlled Congress</a></p>
+          </div> <!-- article-link -->
+          <div class="article-link">
+            <img src="images/recommended_img2.png" alt ="Image 2" width="212px" height="142px"/>
+            <p><a href = "">A new Congress is sworn in but with many old faces</a></p>
+          </div> <!-- article-link -->
         </div> <!--recommended-content -->
-        <div class="tredning-content">
-          <h4> Trending </h4>
-          <ol>
-            <li><a href="">Ronda Rousey’s U.F.C. Return Ends in 48 Seconds of Punches by Amanda Nunes </a> <img src="images/trending_img1.png" width="40px" height="40px"/></li>
-            <li><a href="">Feature: The Evalangical Scion who stopped believing </a> <img src="images/trending_img2.png" width="40px" height="40px"/></li>
-            <li><a href="">Valdimir putin won't expell US Diplomat as Russion Foreign minister Urged</a> </li>
-            <li><a href=""> The Coolest Scene in Snow Boarding? The coast of Rhodes Island</a> <img src="images/trending_img4.png" width="40px" height="40px"/></li>
-            <li><a href=""> Theressa May Scolds Kerry for focus on Israil Settlements</a> <img src="images/trending_img5.png" width="40px" height="40px"/></li>
-            <li><a href=""> 'The Game will go on' as US expels Russian Diplomats</a> <img src="images/trending_img6.png" width="40px" height="40px"/></li>
-            <li><a href=""> New Analysis: Trump gets an opening from Russia but the path is risky</a> <img src="images/trending_img7.png" width="40px" height="40px"/></li>
-            <li><a href=""> New Analysis: If Donald Trump targets Journalists, Thank Obama</a> <img src="images/trending_img8.png" width="40px" height="40px"/></li>
-            <li><a href=""> Op-Ed Columininst: How much sugar you can avoid today</a> <img src="images/trending_img9.png" width="40px" height="40px"/></li>
-            <li><a href=""> Obama Strikes Back at Russia for election Hacking</a> <img src="images/trending_img10.png" width="40px" height="40px"/></li>
-          </ol>
-          <p> <a href="">View more Trending contents »</a> </p>
-        </div> <!-- trending-content -->
       </section><!--Suggested-content -->
     </div> <!-- content -->
 
@@ -443,7 +456,7 @@
           <a href = ""> Go to homepage</a>
         </div><!--site-map-head-->
         <div class="site-links">
-          <p> <a href=""> News</a></p>
+          <p>News</p>
           <p> <a href=""> World</a></p>
           <p> <a href=""> Us</a></p>
           <p> <a href=""> Politics</a></p>
@@ -457,9 +470,9 @@
           <p> <a href=""> Education</a></p>
           <p> <a href=""> Today's Paper</a></p>
           <p> <a href=""> Corrections</a></p>
-        </div><!-- site-links -->
+        </div><!-- site-links  -->
         <div class="site-links">
-          <p> <a href=""> Opinion</a></p>
+          <p> Opinion</p>
           <p> <a href=""> Today's Opinion</a></p>
           <p> <a href=""> Op-Ed Columinist</a></p>
           <p> <a href=""> Editorials</a></p>
@@ -475,7 +488,7 @@
           <p> <a href=""> Corrections</a></p>
         </div><!-- site-links -->
         <div class="site-links">
-          <p> <a href=""> Arts</a></p>
+          <p> Arts</p>
           <p> <a href=""> Today's Art</a></p>
           <p> <a href=""> Art &amp; desing</a></p>
           <p> <a href=""> Books</a></p>
@@ -489,7 +502,7 @@
           <p> <a href=""> NYC events guide</a></p>
         </div><!-- site-links -->
         <div class="site-links">
-          <p> <a href=""> Living</a></p>
+          <p> Living</p>
           <p> <a href=""> Automobile</a></p>
           <p> <a href=""> Crossword</a></p>
           <p> <a href=""> Food</a></p>
@@ -505,7 +518,7 @@
           <p> <a href=""> Wedding &amp; Celebration</a></p>
         </div><!-- site-links -->
         <div class="site-links">
-          <p> <a href=""> Listening &amp; more</a></p>
+          <p> Listening &amp; more</p>
           <p> <a href=""> Classified</a></p>
           <p> <a href=""> Tools &amp; Services</a></p>
           <p> <a href=""> Times Topic</a></p>
@@ -521,7 +534,7 @@
           <p> <a href=""> Manage Account</a></p>
         </div><!-- site-links -->
         <div class="site-subscription">
-          <p> <a href ="">Subscribe</a> </p>
+          <p>SUBSCRIBE</p>
           <div class="main-subscription-channels">
             <p><img src="images/subscription_img1.png" alt"subsrctiion item 1" width="21px" height="21px"/><a href="">INYT Home Delivery</a> </p>
             <p><img src="images/subscription_img2.png" alt"subsrctiion item 2" width="21px" height="21px"/><a href="">Digital Subscription</a> </p>
@@ -541,7 +554,8 @@
           </div><!-- other-editions -->
         </div><!-- site-subscription -->
       </div> <!-- site-map -->
-      <p>
+
+      <p class="bottom-left">
         <a href=""> © 2016 The Newyork Times Company</a>
         <a href=""> Contact Us</a>
         <a href=""> Work with us</a>
@@ -551,11 +565,11 @@
         <a href=""> Terms of services</a>
         <a href=""> Terms of sales</a>
       </p>
+      <p class= "bottom-right">
         <a href=""> Site map</a>
         <a href=""> Help</a>
         <a href=""> Site feedback</a>
         <a href=""> Subscription</a>
-      <p>
       </p>
     </footer>
   </body>
